# dir-compare

./: .gitignore  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: main.rs
dir_compare/: Cargo.toml  Dockerfile
dir_compare/src/: main.rs
dir_diff/src/: main.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CompareView.tsx  SearchBar.tsx  Window.tsx
frontend/src/components/Main/: Main.tsx
frontend/src/constants/: constants.ts
frontend/src/shared/interfaces/: CompareWindow.tsx
src/: main.rs
