[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
httparse = "1.8.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sha1 = "0.10.5"
